--- a/src/main/webapp/admin/harrastajat/harrastajat.xhtml
+++ b/src/main/webapp/admin/harrastajat/harrastajat.xhtml
@@ -25,7 +25,7 @@
 		<ace:column headerText="Maksut">
 			<h:graphicImage value="/kuvat/valittu.png" rendered="#{_harrastaja.sopimuksetOK}" />
 			<ui:repeat var="_viesti" value="#{_harrastaja.sopimusTarkistukset.viestit}">
-				<h:outputText value="#{_viesti}"/>
+				<h:outputText value="#{_viesti}" style="color:red"/>
 			</ui:repeat>
 		</ace:column>
 		<ace:column headerText="Arkistoitu">
