--- a/src/main/webapp/admin/admin.xhtml
+++ b/src/main/webapp/admin/admin.xhtml
@@ -67,7 +67,7 @@
 				<ace:tabPane label="Loki">
 				</ace:tabPane>
 			</ace:tabSet>
-
+			<h:outputText value="#{kirjautunutHenkilö.info}"/>
 		</h:form>
 	</f:view>
 </h:body>
