--- a/src/main/webapp/käyttäjä/käyttäjä.xhtml
+++ b/src/main/webapp/käyttäjä/käyttäjä.xhtml
@@ -27,6 +27,16 @@
 	width: 64px;
 }
 
+
+.erääntynyt {
+	background-color: #ffdd00;
+}
+
+.erääntynytTeksti {
+	color: red;
+	font-weight: bold;
+}
+
 .nimi {
 	font-size: 26px;
 	font-weight: bold;
