--- a/src/main/webapp/käyttäjä/sopimukset.xhtml
+++ b/src/main/webapp/käyttäjä/sopimukset.xhtml
@@ -1,11 +1,14 @@
 <ui:composition xmlns="http://www.w3.org/1999/xhtml" xmlns:h="http://xmlns.jcp.org/jsf/html"
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-	xmlns:ace="http://www.icefaces.org/icefaces/components">
+	xmlns:ace="http://www.icefaces.org/icefaces/components" xmlns:fn="http://java.sun.com/jsp/jstl/functions">
 	<ace:tabPane label="Sopimukset">
 		<ace:dataTable value="#{itse.sopimukset}" var="_sopimus" rows="10" paginator="true" paginatorPosition="bottom"
 			paginatorAlwaysVisible="false" rowStyleClass="#{!_sopimus.sopimusOK ? 'erääntynyt' : ''}">
 			<ace:column>
 				<ace:expansionToggler />
+			</ace:column>
+			<ace:column headerText="Harrastaja">
+				<h:outputText value="#{_sopimus.harrastaja.etunimi}" />
 			</ace:column>
 			<ace:column headerText="Tyyppi">
 				<h:outputText value="#{_sopimus.tyyppi.nimi}" />
@@ -50,7 +53,7 @@
 						</h:outputText>
 					</ace:column>
 					<ace:column>
-						<h:outputLink target="_blank" value="#{request.contextPath}/API/blob/lataa/#{_lasku.pdf.avain}"
+						<h:outputLink target="_blank" value="#{request.contextPath}/API/blob/lataa/#{_sopimuslasku.laskurivi.lasku.pdf.avain}"
 							rendered="#{_sopimuslasku.laskurivi.lasku.pdf != null}">
 							<h:graphicImage value="/kuvat/pdf.png" style="width:24px" />
 						</h:outputLink>
