--- a/src/main/webapp/admin/harrastajat/harrastajat.xhtml
+++ b/src/main/webapp/admin/harrastajat/harrastajat.xhtml
@@ -5,6 +5,8 @@
 		immediate="true">
 		<f:ajax render="@form" />
 	</h:commandButton>
+	<h:button outcome="/tuo.xhtml" image="/kuvat/tuo.png" immediate="true" styleClass="ikoni"/>
+	
 	<ace:dataTable value="#{harrastajat}" var="_harrastaja" selectionMode="single" paginator="true"
 		paginatorPosition="bottom" paginatorAlwaysVisible="false" stateMap="#{harrastajaAdmin.harrastajaRSM}" rows="10"
 		rowSelectListener="#{harrastajaAdmin.harrastajaValittu}">
