--- a/src/main/webapp/tuo.xhtml
+++ b/src/main/webapp/tuo.xhtml
@@ -4,13 +4,21 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:icecore="http://www.icefaces.org/icefaces/core"
 	xmlns:ace="http://www.icefaces.org/icefaces/components" xmlns:ui="http://xmlns.jcp.org/jsf/facelets">
 <h:head>
+	<style>
+.ikoni {
+	height: 40px;
+	width: 40px;
+	margin-left: 15px;
+}
+</style>
 </h:head>
 <h:body>
 	<f:view>
 		<ace:growlMessages />
 		<h:form>
 			<ace:fileEntry fileEntryListener="#{tuoVieAdmin.tuoExcel}" immediate="true" autoUpload="true" />
-			<ace:dataTable value="#{tuodutHarrastajat}" var="_harrastaja" selectionMode="multiple" stateMap="#{tuoVieAdmin.harrastajaRSM}">
+			<ace:dataTable value="#{tuodutHarrastajat}" var="_harrastaja" selectionMode="multiple"
+				stateMap="#{tuoVieAdmin.harrastajaRSM}">
 				<ace:column headerText="Etunimi">
 					<h:outputText value="#{_harrastaja.etunimi}" />
 				</ace:column>
@@ -59,6 +67,7 @@
 					<h:outputText value="#{_harrastaja.lisenssinumero}" />
 				</ace:column>
 			</ace:dataTable>
+			<h:commandButton action="#{tuoVieAdmin.käsittele()}" image="/kuvat/tuo.png" styleClass="ikoni" />
 		</h:form>
 	</f:view>
 </h:body>
