--- a/src/main/webapp/admin/harrastajat/harrastajat.xhtml
+++ b/src/main/webapp/admin/harrastajat/harrastajat.xhtml
@@ -21,6 +21,9 @@
 		<ace:column headerText="Ikä">
 			<h:outputText value="#{_harrastaja.ikä}" />
 		</ace:column>
+		<ace:column headerText="Sukupuoli">
+			<h:outputText value="#{_harrastaja.sukupuoli.nimi}" />
+		</ace:column>
 		<ace:column headerText="Vyöarvo">
 			<h:outputText value="#{_harrastaja.tuoreinVyöarvo.nimi}" />
 		</ace:column>
