--- a/src/main/webapp/tuo.xhtml
+++ b/src/main/webapp/tuo.xhtml
@@ -26,7 +26,7 @@
 					<h:outputText value="#{_harrastaja.sukunimi}" />
 				</ace:column>
 				<ace:column headerText="Sukupuoli">
-					<h:outputText value="#{_harrastaja.mies ? 'Mies' : 'Nainen'}" />
+					<h:outputText value="#{_harrastaja.sukupuoli.nimi}" />
 				</ace:column>
 				<ace:column headerText="Syntynyt">
 					<h:outputText value="#{_harrastaja.syntynyt}">
