--- a/src/main/webapp/käyttäjä/treenikäynnit.xhtml
+++ b/src/main/webapp/käyttäjä/treenikäynnit.xhtml
@@ -2,7 +2,7 @@
 	xmlns:f="http://xmlns.jcp.org/jsf/core" xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
 	xmlns:ace="http://www.icefaces.org/icefaces/components">
 	<ace:tabPane label="Treenikäynnit">
-		<ace:dataTable value="#{itse.treenikäynnit}" var="_treenikäynti" rows="10" paginator="true" paginatorPosition="bottom"
+		<ace:dataTable value="#{kohde.treenikäynnit}" var="_treenikäynti" rows="10" paginator="true" paginatorPosition="bottom"
 			paginatorAlwaysVisible="false">
 			<ace:column headerText="Aikaleima">
 				<h:outputText value="#{_treenikäynti.aikaleima}">
