--- a/src/main/webapp/admin/harrastajat/perustiedot.xhtml
+++ b/src/main/webapp/admin/harrastajat/perustiedot.xhtml
@@ -112,6 +112,11 @@
 						<ace:message for="form:kaupunki" />
 						<h:inputText value="#{harrastaja.osoite.kaupunki}" id="kaupunki" styleClass="capitalized" />
 					</h:panelGrid>
+					<h:outputText value="Puhelin" />
+					<h:panelGrid>
+						<ace:message for="form:puhelin" />
+						<h:inputText value="#{harrastaja.yhteystiedot.puhelinnumero}" id="puhelin" />
+					</h:panelGrid>
 					<h:outputText value="Sähköposti-osoite" />
 					<h:panelGrid>
 						<ace:message for="form:sähkoposti" />
