--- a/src/main/webapp/admin/admin.xhtml
+++ b/src/main/webapp/admin/admin.xhtml
@@ -45,7 +45,8 @@
 	<f:view>
 		<h:form id="form">
 			<ace:growlMessages/>
-			<h:commandLink action="#{exceptionHandler.tapaSessio()}" value="Kirjaudu ulos" />
+			<h:commandLink action="#{exceptionHandler.tapaSessio()}" value="Kirjaudu ulos" style="margin-right:20px"/>
+			<h:commandLink action="/käyttäjä/käyttäjä.xhtml" value="Oma ylläpito" />
 			<ace:tabSet tabChangeListener="#{harrastajaAdmin.päätabiMuuttui}">
 				<ace:tabPane label="Harrastajat">
 					<ui:include src="harrastajat/harrastajat.xhtml" />
