--- a/src/main/webapp/admin/harrastajat/perustiedot.xhtml
+++ b/src/main/webapp/admin/harrastajat/perustiedot.xhtml
@@ -68,7 +68,7 @@
 					</h:selectOneMenu>
 					<h:commandButton action="#{harrastajaAdmin.lisääPerhe}" value="x" image="/kuvat/lisää_perhe.jpg"
 						style="height:50px; width:50px; margin-left:15px">
-						<f:ajax execute="form:sukunimi" render="form:perhepanel form:sukunimigrid form:huoltajapanel" />
+						<f:ajax execute="form:henkilötietopanel" render="form:perhepanel form:sukunimigrid form:huoltajapanel" />
 					</h:commandButton>
 				</h:panelGrid>
 			</ace:panel>
