--- a/src/main/webapp/käyttäjä/vyökokeet.xhtml
+++ b/src/main/webapp/käyttäjä/vyökokeet.xhtml
@@ -39,9 +39,9 @@
 			<ace:column headerText="Seuraavaan kokeeseen">
 				<h:panelGrid columns="2" rendered="#{_vyökoe.tuoreinVyökoe}">
 					<h:outputText value="Päiviä" />
-					<h:outputText value="#{_kohde.jäljelläVyökokeeseen(kaikkiVyöarvot).aikaString}" />
+					<h:outputText value="#{kohde.jäljelläVyökokeeseen(kaikkiVyöarvot).aikaString}" />
 					<h:outputText value="Treenikertoja" />
-					<h:outputText value="#{_kohde.jäljelläVyökokeeseen(kaikkiVyöarvot).treenikertoja} kertaa" />
+					<h:outputText value="#{kohde.jäljelläVyökokeeseen(kaikkiVyöarvot).treenikertoja} kertaa" />
 				</h:panelGrid>
 			</ace:column>
 		</ace:dataTable>
